<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.activities.LoginScreen">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_extrabold"
        android:text="@string/txt_account"
        android:textSize="30dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEnterMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/dese_enter_mobile_num"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

    <LinearLayout
        android:id="@+id/phoneLayout"
        android:layout_margin="20dp"
        android:padding="2dp"
        android:background="@drawable/checkbox_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txtEnterMobileNumber">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_phone" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/lightGreen" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            android:id="@+id/nameInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperTextTextColor="@color/red"
            app:prefixTextAppearance="@font/manrope_light"
            android:background="@null"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMobileNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/txt_mobile_number"
                android:fontFamily="@font/manrope_regular"
                android:maxLines="1"
                android:textColor="@color/black"
                android:background="@null"
                android:textSize="15sp"
                android:paddingVertical="4dp"
                android:minHeight="40dp"
                android:maxHeight="40dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/phone_error"
        android:textColor="@color/red"
        android:textSize="13dp"
        android:visibility="invisible"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="@id/phoneLayout"
        app:layout_constraintTop_toBottomOf="@id/phoneLayout"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/primaryColor"
        android:fontFamily="@font/manrope_extrabold"
        android:padding="10dp"
        android:text="@string/txt_continue"
        android:textSize="18dp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLayout"
        app:layout_constraintVertical_bias="0.061" />


</androidx.constraintlayout.widget.ConstraintLayout>