<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.OnBoardingScreen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:layout_weight="1"
            android:id="@+id/viewPager1"
            android:layout_width="match_parent"
           android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.viewpager.widget.ViewPager>

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/sf_lightGray">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/header_onboarding_1"
                    android:textSize="22dp"
                    android:fontFamily="@font/manrope_extrabold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txtDese"
                    android:text="@string/dese_onboarding_1"
                    android:layout_margin="10dp"
                    android:layout_marginTop="50dp"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:fontFamily="@font/manrope_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txtTitle">
                </TextView>

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/dotIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:outlineAmbientShadowColor="@color/lightGreen"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btnNext" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColor"
                    android:padding="10dp"
                    app:cornerRadius="10dp"
                    android:text="@string/txt_next"
                    android:textSize="15dp"
                    android:fontFamily="@font/manrope_extrabold"
                    android:layout_margin="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textColor="@color/primaryColor"
                    android:backgroundTint="@color/sf_lightGray"
                    app:cornerRadius="10dp"
                    android:padding="10dp"
                    android:text="@string/txt_skip"
                    android:fontFamily="@font/manrope_extrabold"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>