<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.ProfileSetUp_1_Fragment">

    <TextView
        android:id="@+id/txtProfileSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_extrabold"
        android:text="@string/txt_profile_setup"
        android:textSize="25dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEnterDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_medium"
        android:gravity="center"
        android:text="@string/txt_enter_details"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProfileSetup" />

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_margin="20dp"
        android:padding="2dp"
        android:background="@drawable/checkbox_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txtEnterDetails">

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_person" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/lightGreen" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            android:id="@+id/nameInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperTextTextColor="@color/red"
            android:background="@null"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/txt_full_name"
                android:fontFamily="@font/manrope_regular"
                android:maxLines="1"
                android:textColor="@color/black"
                android:background="@null"
                android:textSize="15sp"
                android:paddingVertical="4dp"
                android:minHeight="40dp"
                android:maxHeight="40dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_margin="20dp"
        android:padding="2dp"
        android:background="@drawable/checkbox_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_mail" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/lightGreen" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            android:id="@+id/emailInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperTextTextColor="@color/red"
            android:background="@null"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/txt_email"
                android:fontFamily="@font/manrope_regular"
                android:maxLines="1"
                android:textColor="@color/black"
                android:background="@null"
                android:textSize="15sp"
                android:paddingVertical="4dp"
                android:minHeight="40dp"
                android:maxHeight="40dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/dobLayout"
        android:layout_margin="20dp"
        android:padding="2dp"
        android:background="@drawable/checkbox_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_calender" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/lightGreen" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            android:id="@+id/dobInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperTextTextColor="@color/red"
            android:background="@null"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/txt_date_of_birth"
                android:fontFamily="@font/manrope_regular"
                android:maxLines="1"
                android:textColor="@color/black"
                android:background="@null"
                android:textSize="15sp"
                android:paddingVertical="4dp"
                android:minHeight="40dp"
                android:maxHeight="40dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

        <CheckBox
        android:id="@+id/ckbTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I agree all terms &amp; conditions."
        app:layout_constraintTop_toBottomOf="@+id/dobLayout"
        app:layout_constraintStart_toStartOf="@id/nameLayout"/>
    <CheckBox
        android:id="@+id/ckbAge"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:text="Yes I am 18+ years old."
        app:layout_constraintTop_toBottomOf="@+id/ckbTerms"
        app:layout_constraintStart_toStartOf="@id/nameLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>